apps/sample-application/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "True"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - sample-application.intra.bmw12.ch
  rules:
    - host: sample-application.intra.bmw12.ch
      http:
        paths:
          - backend:
              serviceName: sample-application-backend
              servicePort: 8080
